feat: connection with Redis